[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Mini.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Ellie.tscn" type="PackedScene" id=11]

[node name="Player" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="Mini" parent="." instance=ExtResource( 1 )]

[node name="Ellie" parent="." instance=ExtResource( 11 )]
position = Vector2( -16, -31 )

[connection signal="ellie_entered_area" from="Mini" to="." method="_on_Mini_ellie_entered_area"]
[connection signal="ellie_exited_area" from="Mini" to="." method="_on_Mini_ellie_exited_area"]
